--- a/gb/20/1/29/n11828691.md
+++ b/gb/20/1/29/n11828691.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rfvbv298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rfvbv298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>武汉肺炎引美国人抢购口罩 官员：不必要</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>中国疫情引美国人抢购口罩 官员：不必要</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1195281043-600x400.jpg" />
 <h6>1月22日，北京口罩脱销。（WANG ZHAO/AFP via Getty Images）
 </h6>
 <hr>
-<p>【大纪元2020年01月29日讯】目前，虽然美国只确定了5例新型冠状病毒（也称<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>）感染，但这种正在中国大陆疯狂传播的致死病毒已在美国引发恐慌，许多人开始抢购<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E5%A4%96%E7%A7%91%E5%8F%A3%E7%BD%A9.md">外科口罩</a>。而传染病专家查尔斯·邱（Charles Chiu）博士说，目前在美国还没有必要戴外科口罩或是N95防尘口罩。</p>
-<p>据CNN报导，身为加州大学旧金山分校实验室医学教授的邱博士表示，没有证据显示，新型冠状病毒在美国的传播像在中国一样广泛，疾控中心（CDC）也没有建议美国人在公共场合戴口罩；而且，目前也没证据显示戴口罩有助防止感染病毒。对于那些最近未去过中国旅行、或是没有直接接触感染者的居民，邱博士不建议去买口罩。</p>
+<p>【大纪元2020年01月29日讯】目前，虽然美国只确定了5例<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">新型冠状病毒</a>（也称武汉肺炎）感染，但这种正在中国大陆疯狂传播的致死病毒已在美国引发恐慌，许多人开始抢购<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A4%96%E7%A7%91%E5%8F%A3%E7%BD%A9.md#1">外科口罩</a>。而传染病专家查尔斯·邱（Charles Chiu）博士说，目前在美国还没有必要戴外科口罩或是N95防尘口罩。</p>
+<p>据CNN报导，身为加州大学旧金山分校实验室医学教授的邱博士表示，没有证据显示，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%9E%8B%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">新型冠状病毒</a>在美国的传播像在中国一样广泛，疾控中心（CDC）也没有建议美国人在公共场合戴口罩；而且，目前也没证据显示戴口罩有助防止感染病毒。对于那些最近未去过中国旅行、或是没有直接接触感染者的居民，邱博士不建议去买口罩。</p>
 <h2>建议：医生应戴口罩，但美国公众无需</h2>
-<p>美国人正在抢购两种防护面罩：<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E5%A4%96%E7%A7%91%E5%8F%A3%E7%BD%A9.md">外科口罩</a>和N95防尘口罩，但疾控中心未建议公众戴这两种口罩。</p>
+<p>美国人正在抢购两种防护面罩：<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A4%96%E7%A7%91%E5%8F%A3%E7%BD%A9.md#1">外科口罩</a>和N95防尘口罩，但疾控中心未建议公众戴这两种口罩。</p>
 <p>专家说，外科口罩确实可以防止较大的呼吸道飞沫（喷嚏或咳嗽引起的黏液），但无法阻挡住空气中的细微飞沫。因此CDC认为一般口罩无法完全有效预防冠状病毒的传播。</p>
 <p>医院流行病学家和感染预防专家Saskia Popescu表示，戴上口罩有助阻止患者的细菌传播，但外科口罩无法紧贴面部密封，因此能够提供的保护很有限。真正可以提供最大保护的是N95口罩，但只有执行特定任务的医生才需佩戴N95口罩。</p>
 <p>CDC的确建议医疗照护者戴N95口罩，特别是正在治疗新型冠状病毒感染者的医护人员，N“95”可以除去至少“95”%的空气传播颗粒。</p>
@@ -26,42 +26,48 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/29/n11828691.htm">武汉肺炎引美国人抢购口罩 官员：不必要</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827390.htm">为病例增加做准备 专家吁政府释放口罩储备</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827259.htm">疾管署连3天释600万片口罩 每人限购3片</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826699.htm">怕上海变武汉 市民超市抢空蔬菜快餐面口罩</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826685.htm">疫情严峻口罩需求大增 台厂商赶工生产应急</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825883.htm">疫情紧张 大陆游客爆买口罩 日本多药房售罄</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824592.htm">纽约华埠教堂取消聚餐 外科口罩断货</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824611.htm">防武汉肺炎  美国酒店华裔协会呼吁酒店业从业人员戴口罩</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823456.htm">多伦多确诊首例武汉肺炎 N95口罩几乎脱销</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823406.htm">法国现三宗武汉肺炎病例 华人担忧抢购口罩</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822511.htm">发瘟疫财 北京一药店10只口罩卖850元</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825817.htm">从习不担任疫情组长看高层运作内幕</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826899.htm">【拍案惊奇】武汉疫情4个误区 毒源不止一处</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826771.htm">天合光能副总裁死于肺炎 确诊到死亡仅5天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827244.htm">【视频】武汉小伙再曝肺炎疫情真实情况</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801163.htm">除旧布新 怎样贴春联春贴不犯禁忌？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779463.htm">【命理】一朝天子一朝臣 天命所定</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812177.htm">初三民间故事　老鼠娶亲</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825853.htm">武汉肺炎 火化人数知多少？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824388.htm">上海136人医疗队在武汉求救 没有饭吃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821374.htm">武汉人恐慌无助 网络上求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826899.htm">【拍案惊奇】武汉疫情4个误区 毒源不止一处</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826851.htm">台湾小狗咬烂护照阻止主人去武汉 网民称赞</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822832.htm">关心武汉封城惨况 台女星：愿大家都平安</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825293.htm">Kobe骤逝 艺声、雨琦等K-POP明星痛心悼念</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823229.htm">武汉肺炎蔓延 刘德华第三度取消演唱会</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825930.htm">传奇球星科比·布莱恩特骤逝 演艺圈众星悼念</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11827390.md#1">为病例增加做准备 专家吁政府释放口罩储备</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11827259.md#1">疾管署连3天释600万片口罩 每人限购3片</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11826699.md#1">怕上海变武汉 市民超市抢空蔬菜快餐面口罩</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11826685.md#1">疫情严峻口罩需求大增 台厂商赶工生产应急</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/27/n11825883.md#1">疫情紧张 大陆游客爆买口罩 日本多药房售罄</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/27/n11824592.md#1">纽约华埠教堂取消聚餐 外科口罩断货</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/27/n11824611.md#1">防武汉肺炎  美国酒店华裔协会呼吁酒店业从业人员戴口罩</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/26/n11823456.md#1">多伦多确诊首例武汉肺炎 N95口罩几乎脱销</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/26/n11823406.md#1">法国现三宗武汉肺炎病例 华人担忧抢购口罩</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/26/n11822511.md#1">发瘟疫财 北京一药店10只口罩卖850元</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rfvbv298/djy/blob/master/gb/20/1/29/n11828691.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11827182.md#1">武汉肺炎持续扩散 中国经济雪上加霜</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/22/n10656949.md#1" target="_blank">胡健：少年反革命</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/29/n11828691.htm">中国疫情引美国人抢购口罩 官员：不必要</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/29/n11828691.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
