--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -4,7 +4,8 @@
 中共肺炎全球疫情及美国疫情大数据请点击这里。
 要点：
 川普：世卫是一场灾难
-蓬佩奥：中共故意隐瞒疫情.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:28 AM					</td></tr>
+蓬佩奥：中共故意隐瞒疫情.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:43 AM					</td></tr>
+<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank">【思想领袖】章家敦：瘟疫促使中共垮台</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-150x120.jpg" align ="left"></a>中共病毒揭示了中共政权的当务之急是什么？美国在华公司处境如何？这些又是如何同中共政权在美国的大外宣运作联系到一起的？这里是美国思想领袖节目......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-150x120.jpg" align ="left"></a>4月下旬以来，有关香港警队及中共公安部异动消息频传，看似杂乱，却有内在联系。4月30日警务处处长“一哥”邓炳强强制取消长洲太平清醮的抗疫送神仪式被非议；警务处助理处长陶辉因违规入住“牌照房”被查，5月2日再被指涉嫌霸占官地，僭建民宿招租；4月29日包括陶辉在内的英籍警官被指控是警暴“要犯”，港警后台北京政法系统正被整肃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 10:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080270.md#1" target="_blank">【一线采访】佳木斯居民：当地疫情越发严重</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080270.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/13faf2c7bcc86c5dede2218cd11570d7-150x120.jpg" align ="left"></a>黑龙江省的中共病毒（武汉肺炎）不仅仅只是在哈尔滨、绥芬河集中爆发，佳木斯当地人反映当地疫情也越发严重，佳木斯几大医院进入应急状态，景点关门，进商场要过多道关，当地宾馆被征用做集中隔离。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079463.md#1" target="_blank">【纽约疫情5.3】美国东北7州合组采购团</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079463.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211647940-150x120.jpg" align ="left"></a>周日（5月3日），美国东北部的州长线上出席了纽约州的每日疫情发布会。纽约州长库默在会议上说，他与东北部七个州建立新的区域性合作关系，成立医疗设备采购团。该采购团将汇总订单，以更低的价格购置设备，稳定各州的供应链。采购团预计将采购50亿美元的设备和用品，其中包括个人防护设备、测试包和呼吸机等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:14 AM							</td></tr>
@@ -44,6 +45,5 @@
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/1/n12076679.md#1" target="_blank">疫情下 美国38个州已重新开放或开放在即</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/1/n12076679.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/atlanta-business-1200x800-150x120.jpg" align ="left"></a>根据《大纪元时报》的统计， 为遏制CCP病毒的扩散，美国实施的几近完全的经济封锁，现在有38 个州已经开始重新开放或计划很快重新开放。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077688.md#1" target="_blank">洪微：世卫首现吹哨人 打脸中共与谭德塞</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077688.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/03/GettyImages-1205434186-150x120.jpg" align ="left"></a>据英国“天空新闻”（Sky News）报导，世界卫生组织WHO驻中国的代表高力（Dr. Gauden Galea）日前接受采访，透露了关于中国疫情的一些关键信息，堪称世卫组织内部的第一个吹哨人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 3:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077491.md#1" target="_blank">五眼联盟情报档：中共故意瞒疫 销毁证据</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077491.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/000_1O94MI-150x120.jpg" align ="left"></a>今日，澳洲《每日电讯报》取得了一份情报单位的研究报告。报告中指出，中国故意隐匿或销毁了中共病毒（武汉肺炎）爆发的证据，导致成千上万的人为此丧生。这份长达15页报告，来自美国、加拿大、英国、澳大利亚和新西兰情报机构所组成的“五眼联盟”。报告指出，中共对疫情的保密，相当于“对国际透明度的侵犯”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 2:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12076984.md#1" target="_blank">【一线采访】五一各地防疫限制市民出行</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12076984.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/Screen-Shot-2020-05-02-at-12.12.07-pm-150x120.png" align ="left"></a>5.1日首个疫情下的小长假，各地限制师生外出，甚至取消假日，旅游景点低价房仍问津者不多，有民众表示很多人不信官方公布的疫情数字，选择在家不出门。多地爆中共继续造假掩盖疫情真相。而疫情下生存不易，部分哈市民众五一摆地摊谋活路，也有在京的武汉人，因不堪疫情下自己的来回被自费隔离的遭遇跳楼自杀。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月02日 12:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wdr216/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/wdr216/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
