--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -5,7 +5,7 @@
 要点：
 川普：世卫是一场灾难
 蓬佩奥：中共故意隐瞒疫情.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:43 AM					</td></tr>
-<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank">【思想领袖】章家敦：瘟疫促使中共垮台</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-150x120.jpg" align ="left"></a>中共病毒揭示了中共政权的当务之急是什么？美国在华公司处境如何？这些又是如何同中共政权在美国的大外宣运作联系到一起的？这里是美国思想领袖节目......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank">【思想领袖】章家敦：瘟疫加快中共垮台</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-150x120.jpg" align ="left"></a>中共病毒揭示了中共政权的当务之急是什么？美国在华公司处境如何？这些又是如何同中共政权在美国的大外宣运作联系到一起的？这里是美国思想领袖节目......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-150x120.jpg" align ="left"></a>4月下旬以来，有关香港警队及中共公安部异动消息频传，看似杂乱，却有内在联系。4月30日警务处处长“一哥”邓炳强强制取消长洲太平清醮的抗疫送神仪式被非议；警务处助理处长陶辉因违规入住“牌照房”被查，5月2日再被指涉嫌霸占官地，僭建民宿招租；4月29日包括陶辉在内的英籍警官被指控是警暴“要犯”，港警后台北京政法系统正被整肃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 10:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080270.md#1" target="_blank">【一线采访】佳木斯居民：当地疫情越发严重</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080270.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/13faf2c7bcc86c5dede2218cd11570d7-150x120.jpg" align ="left"></a>黑龙江省的中共病毒（武汉肺炎）不仅仅只是在哈尔滨、绥芬河集中爆发，佳木斯当地人反映当地疫情也越发严重，佳木斯几大医院进入应急状态，景点关门，进商场要过多道关，当地宾馆被征用做集中隔离。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079463.md#1" target="_blank">【纽约疫情5.3】美国东北7州合组采购团</a><br></h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079463.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211647940-150x120.jpg" align ="left"></a>周日（5月3日），美国东北部的州长线上出席了纽约州的每日疫情发布会。纽约州长库默在会议上说，他与东北部七个州建立新的区域性合作关系，成立医疗设备采购团。该采购团将汇总订单，以更低的价格购置设备，稳定各州的供应链。采购团预计将采购50亿美元的设备和用品，其中包括个人防护设备、测试包和呼吸机等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:14 AM							</td></tr>
